# deepquant

./: .gitignore  README.md  architecture.html  start.sh  vnpy_ctp_analysis.html
.cursor/rules/: project-memory.mdc
deepquant/: README.md  README_ENG.md  install.bat  install.sh  install_osx.sh  pyproject.toml
deepquant/.pytest_cache/v/cache/: lastfailed  nodeids
deepquant/deepquant/: __init__.py
deepquant/deepquant/alpha/: lab.py
deepquant/deepquant/alpha/dataset/datasets/: alpha_101.py  alpha_158.py
deepquant/deepquant/alpha/model/: template.py
deepquant/deepquant/alpha/model/models/: lasso_model.py  lgb_model.py  mlp_model.py
deepquant/deepquant/alpha/strategy/: backtesting.py  template.py
deepquant/deepquant/alpha/strategy/strategies/: equity_demo_strategy.py
deepquant/deepquant/chart/: base.py  item.py  manager.py  widget.py
deepquant/deepquant/event/: engine.py
deepquant/deepquant/trader/: constant.py  contract_cache.py  data_sync_engine.py  database.py  engine.py  event.py  gateway.py  logger.py  market_data.py  panel_settings.py  public_datafeed.py
deepquant/deepquant/trader/locale/en/LC_MESSAGES/: vnpy.mo
deepquant/deepquant/trader/ui/: mainwindow.py  widget.py
deepquant/docs/: conf.py
deepquant/docs/community/app/: cta_backtester.md  data_manager.md
deepquant/docs/community/install/: mac_install.md
deepquant/patches/: datamanager_engine.py  datamanager_widget.py
deepquant/vnpy/: __init__.py
deepquant/vnpy/chart/: kline_chart.html  kline_widget.py
deepquant/vnpy/trader/: contract_cache.py  data_sync_engine.py  engine.py  panel_settings.py
deepquant/vnpy/trader/ui/: qt.py  widget.py
deepquant/web/: apps.html  index.html  server.py
deepquant_ctabacktester/: README.md  pyproject.toml
deepquant_ctabacktester/deepquant_ctabacktester/: __init__.py  engine.py
deepquant_ctabacktester/deepquant_ctabacktester/locale/: __init__.py  build_hook.py
deepquant_ctabacktester/deepquant_ctabacktester/ui/: widget.py
deepquant_ctp/: README.md  build_tts.sh  meson.build  pyproject.toml  run_gateway.py  vnpy_ctp
deepquant_ctp/deepquant_ctp/api/: __init__.py
deepquant_ctp/deepquant_ctp/gateway/: __init__.py  ctp_gateway.py  tts_gateway.py
deepquant_ctp/script/: run.py
deepquant_ctp/test/: test_md.py  test_td.py
deepquant_datamanager/: README.md  pyproject.toml
deepquant_datamanager/deepquant_datamanager/: __init__.py  engine.py
deepquant_datamanager/deepquant_datamanager/ui/: __init__.py  widget.py
deepquant_datarecorder/: README.md  pyproject.toml  run.py
deepquant_datarecorder/deepquant_datarecorder/: __init__.py  buffer.py  engine.py  gateway_ws.py  tick_convert.py  writer.py
deepquant_datarecorder/deepquant_datarecorder/ui/: widget.py
deepquant_datarecorder/script/: run.py
deepquant_desktop/: pyproject.toml  run.py  run_chart.py  run_headless.py
deepquant_desktop/deepquant_desktop/: __init__.py  api_client.py  mainwindow.py  qt.py  widget.py
deepquant_desktop/deepquant_desktop/chart/: item.py  kline_widget.py  widget.py
deepquant_gateway/: README.md  gateways.toml  pyproject.toml  run.py
deepquant_gateway/deepquant_gateway/: config.py  server.py
deepquant_gateway/deepquant_gateway/gateway/: __init__.py  ctp_gateway.py
deepquant_server/: README.md  pyproject.toml  run.py
deepquant_server/deepquant_server/: __init__.py  account_store.py  backtest_store.py  bar_merge.py  data_api.py  data_update_service.py  gateway_bridge.py  gateway_client.py  json_util.py  server.py  strategy_service.py
deepquant_server/deepquant_server/gateway/: __init__.py
deepquant_server/deepquant_server/gateway/ctp/: __init__.py
deepquant_server/deepquant_server/gateway/tts/: __init__.py
deepquant_server/tests/: test_data_update.py
deepquant_web/: README.md  run.py
deepquant_web/static/: apps.html  index.html
deepquant_web/static/css/: style.css
deepquant_web/static/js/: app.js  apps-app.js  index-app.js  store.js  tab-data.js  tab-log.js  tab-settings.js  tab-strategy.js  tab-trading.js
deepquant_web/static/js/components/: account-drawer.js  add-watchlist-modal.js  bottom-dock.js  confirm-modal.js  contract-picker.js  data-contract-browser.js  data-detail-panel.js  data-download-drawer.js  data-gap-panel.js  data-import-modal.js  data-recorder-panel.js  data-task-bar.js  data-tree-nav.js  data-watchlist-check.js  onboarding.js  settings-accounts.js  settings-appearance.js  settings-backtest-data.js  settings-status-bar.js  settings-trading-prefs.js  strategy-doc-panel.js  term-help.js  tick-stream-drawer.js  watchlist-panel.js
deepquant_web/static/js/core/: backtest-panel.js  chart.js  contract-label.js  contract-picker.js  data-nav.js  format.js  latency.js  persist.js  search.js  strategy-docs.js  strategy-label.js  strategy-workflow.js  term-glossary.js  trading-rules.js  ui.js
docs/superpowers/plans/: 2026-06-29-web-frontend-parity.md  2026-06-30-gateway-microservice.md
docs/superpowers/specs/: 2026-06-29-web-frontend-parity-design.md  2026-06-30-gateway-microservice.md
vnpy/examples/: mac_run.py  paper_run.py
vnpy/patches/: datamanager_engine.py  datamanager_widget.py
vnpy/vnpy/chart/: kline_chart.html  kline_widget.py
vnpy/vnpy/trader/: contract_cache.py  data_sync_engine.py  engine.py  market_data.py  public_datafeed.py
vnpy/vnpy/trader/ui/: mainwindow.py  widget.py
vnpy/web/: apps.html  index.html  server.py
vnpy/web/wasm/: CMakeLists.txt  README.md  build_wasm.sh  datamodels.h  hello_qt.cpp  main.cpp  main_wasm.cpp  mainwindow.cpp  mainwindow.h  pre.js  pre_qt.js  qt_wasm.cpp  qt_wasm.wasm  veighna_wasm.cpp  veighna_wasm.wasm  websocketclient.cpp  websocketclient.h
vnpy/web/wasm-dist/: hello_qt.html  hello_qt.js  hello_qt.wasm  index.html  pyodide.html  qt.html  qt_app.html  qt_app.js  qt_plugins.json  qt_test.wasm  qt_wasm.js  veighna.html  veighna.js  veighna.wasm  veighna_qt.wasm  veighna_wasm.js
vnpy/web/wasm-dist/qt/: qt.conf  qt_plugins.json
vnpy/web/wasm/hello/: CMakeLists.txt  hello_qt.cpp
vnpy_ctp/vnpy_ctp/gateway/: ctp_gateway.py
(+2 files in other folders)
