[project]
name = "deepquant"
version = "0.0.1"
description = "DeepQuant — Quantitative trading framework."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "DeepQuant Community"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
]
requires-python = ">=3.10"
dependencies = []
keywords = ["quant", "quantitative", "investment", "trading", "algotrading"]

[project.urls]
"Homepage" = "https://www.vnpy.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepquant", "vnpy"]
