cmake_minimum_required(VERSION 3.16)
project(HelloQt LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_AUTOMOC ON)
set(Qt6_DIR "$ENV{HOME}/qt6-wasm/lib/cmake/Qt6")
set(Qt6HostInfo_DIR "$ENV{HOME}/qt6-wasm/lib/cmake/Qt6HostInfo")
set(QT_BUILD_CMAKE_PREFIX_PATH "$ENV{HOME}/qt6-wasm")
set(QT_HOST_PATH "/opt/homebrew/Cellar/qtbase/6.11.1")
find_package(Qt6 REQUIRED COMPONENTS Widgets)
qt_add_executable(hello_qt hello_qt.cpp)
